--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, /* structural elements 结构元素 */
 dl, dt, dd, ul, ol, li, /* list elements 列表元素 */
 pre, /* text formatting elements 文本格式元素 */
-fieldset, lengend, button, input, textarea, /* form elements 表单元素 */
+fieldset, lengend, button, textarea, /* form elements 表单元素 */
 th, td { /* table elements 表格元素 */
     margin: 0;
     padding: 0;
@@ -15,25 +15,31 @@ body{
 .header
 {
     padding-top: 15rem;
-    width: 50%;
+    width: 90%;
     margin:0 auto;
-    text-align: center;
+    
 }
 .wapper,p
 {
-    min-width: 300px;
+    
+    min-width: 312px;
+}
+p{
+    text-align: center;
 }
 audio{
+    text-align: center;
     width: 100%;
 }
-.last,.next
-{
-    width: 3rem;
-    height: 3rem;
-}
 
-input.input_num
+.inputcenter
 {
-    width: 60%;
-    height: 3rem    ;
+   display: flex;
+   justify-content:space-between;
+}
+.input_num
+{
+    padding: 0 10px 0 0;
+    font-size: 20px;
+    height: 3rem;
 }
