--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
 }
 .wapper,p
 {
-    
     min-width: 312px;
 }
 p{
@@ -31,7 +30,10 @@ audio{
     text-align: center;
     width: 100%;
 }
-
+.last,.next
+{
+    height: 3rem;
+}
 .inputcenter
 {
    display: flex;
